@@ -27,7 +27,6 @@ import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Base64;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -301,7 +300,7 @@ public class OAuthBearerUnsecuredJws implements OAuthBearerToken {
             for (Entry<String, JsonNode> entry : jsonNode.properties()) {
                 retval.put(entry.getKey(), convert(entry.getValue()));
             }
-            return Collections.unmodifiableMap(retval);
+            return Map.copyOf(retval);
         } catch (IllegalArgumentException e) {
             // potentially thrown by java.util.Base64.Decoder implementations
             throw new OAuthBearerIllegalTokenException(
@@ -318,7 +317,7 @@ public class OAuthBearerUnsecuredJws implements OAuthBearerToken {
         if (tmpSplits.size() != 3)
             throw new OAuthBearerIllegalTokenException(OAuthBearerValidationResult.newFailure(
                     "Unsecured JWS compact serializations must have 3 dot-separated Base64URL-encoded values"));
-        return Collections.unmodifiableList(tmpSplits);
+        return List.copyOf(tmpSplits);
     }
 
     private static Object convert(JsonNode value) {
@@ -361,6 +360,6 @@ public class OAuthBearerUnsecuredJws implements OAuthBearerToken {
                 retval.add(scope.trim());
             }
         }
-        return Collections.unmodifiableSet(retval);
+        return Set.copyOf(retval);
     }
 }
